--- a/src/style.css
+++ b/src/style.css
@@ -39,4 +39,13 @@ h2 {
 button {
   background-color: #6b6b6b;
   color: #ffffff;
+  transition: background-color 1s !important;
+  &:disabled {
+    background-color: #2b2b2b;
+    color: #796a6a;
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: not-allowed;
+  }
 }
+
