--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@ h2 {
   padding: 1rem !important;
 }
 
-button {
+button:not(.v-btn) {
   background-color: #6b6b6b;
   color: #ffffff;
   transition: background-color 1s !important;
@@ -49,4 +49,17 @@ button {
 
 .text-red {
   color: red;
+}
+
+/* Overlay style */
+.overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
