--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,15 @@
 :root {
-  font-family: "Press Start 2P", monospace;
+  font-family: "Sans comic", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   margin: 1rem;
-
   color: #ffffff;
-  background-color: #242424;
+  background-color: #242424 !important;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-button {
-  border: unset;
 }
 
 h2 {
@@ -24,7 +19,7 @@ h2 {
 
 /* Tooltip styles */
 .v-tooltip > .v-overlay__content {
-  background-color: #2b2b2b;
+  background-color: #2b2b2b !important;
   color: #ffffff;
   border: 1px solid #f1f1f1 !important;
   box-sizing: border-box;
@@ -36,19 +31,13 @@ h2 {
   padding: 1rem !important;
 }
 
-button:not(.v-btn) {
-  background-color: #6b6b6b;
-  color: #ffffff;
-  transition: background-color 1s !important;
-  &:disabled {
-    background-color: #2b2b2b;
-    color: #796a6a;
-    opacity: 0.5;
-  }
-}
-
 .text-red {
   color: red;
+}
+
+.v-btn {
+  background-color: #2b2b2b !important;
+  text-transform: none !important;
 }
 
 /* Overlay style */
@@ -58,7 +47,6 @@ button:not(.v-btn) {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
