--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,8 @@ h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   max-width: 22.5rem !important;
-  width: 100% !important;
+  width: fit-content !important;
+  padding: 2rem !important;
   color: #ffffff !important;
   padding: 1rem !important;
 }
@@ -38,6 +39,10 @@ h2 {
 .v-btn {
   background-color: #2b2b2b !important;
   text-transform: none !important;
+  &:disabled {
+    pointer-events: auto !important;
+    cursor: auto;
+  }
 }
 
 /* Overlay style */
@@ -50,4 +55,11 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+h1 {
+  font-size: 1.5em;
+  margin: 0;
+  display: flex;
+  align-self: flex-start;
 }
