--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,13 @@ h1 {
   display: flex;
   align-self: flex-start;
 }
+
+@media screen and (min-width: 1200px) {
+  html, body {
+    max-width: 100vw;
+    max-height: 100dvh;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+  }
+}
