--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,7 @@
   margin: 1rem;
   color: #ffffff;
   background-color: #242424 !important;
-  overflow-y: hidden !important;
-
+  margin: 0 1rem;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -72,6 +71,7 @@ h1 {
     overflow: hidden;
     margin: 0;
     padding: 0;
+    max-height: 100%;
   }
 }
 
