--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
   margin: 1rem;
+  overflow-y: hidden;
   color: #ffffff;
   background-color: #242424 !important;
   margin: 0 1rem;
