--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,11 @@
   font-family: "Sans comic", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  margin: 1rem;
-  overflow-y: hidden;
   color: #ffffff;
   background-color: #242424 !important;
   margin: 0 1rem;
+  scrollbar-width: thin;
+  scrollbar-color: #2b2b2b #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
